--- a/src/index.html
+++ b/src/index.html
@@ -6,22 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vanilla App Template</title>
     <link rel="stylesheet" href="./css/styles.css" />
-    <link rel="stylesheet" href="./css/footer.css" />
-    <link rel="stylesheet" href="./css/header.css" />
-    <link rel="stylesheet" href="./css/section1.css" />
   </head>
   <body>
-    <load src="./partials/header.html" icon-path="img/sprite.svg#logo" />
+    <load src="./partials/header-nav-section.html" />
 
     <main>
       <!-- Loads the specified .html file -->
-      <load src="./partials/section1.html" />
-
-
+      <load src="./partials/about-us-section.html" />
+      <load src="./partials/hero-section.html" />
+      <load src="./partials/our-courses-section.html" />
+      <load src="./partials/our-mentors-section.html" />
+      <load src="./partials/sign-up-section.html" />
+      <load src="./partials/reviews-section.html" />
 
     </main>
 
-    <load src="./partials/footer.html" />
+    <load src="./partials/footer-section.html" />
 
     <script type="module" src="./main.js"></script>
   </body>
