--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,13 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
+    <load src="./partials/header.html" icon-path="img/sprite.svg#logo" />
     <load src="./partials/header-nav-section.html" />
-
     <main>
       <!-- Loads the specified .html file -->
+      <load src="./partials/vite-promo.html" />
+      <load src="./partials/badges.html" />
+
       <load src="./partials/about-us-section.html" />
       <load src="./partials/hero-section.html" />
       <load src="./partials/our-courses-section.html" />
@@ -21,6 +24,7 @@
 
     </main>
 
+    <load src="./partials/footer.html" />
     <load src="./partials/footer-section.html" />
 
     <script type="module" src="./main.js"></script>
